# ghc-android-cross-compiler

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  build.sh  clean.sh  format.hs  gacc.cabal
.github/workflows/: compile.yml  haskell.yml
app/: Main.hs
scripts/: bootstrap-wrappers.sh  fetch-ndk.sh  init-prefix.sh
src/GACC/: AndroidNDK.hs  BuildDir.hs  Config.hs
